# cerebellum

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .env.template  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  justfile  mkdocs.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  ProjectOptions.cmake  Sanitizers.cmake
controlplane/: CMakeLists.txt  Dockerfile  static_config.yaml
controlplane/include/api/: backends_handler.hpp  stats_handler.hpp
controlplane/include/health/: backend_state.hpp  health_checker.hpp
controlplane/include/monitor/: monitor_component.hpp
controlplane/include/stats/: stats_aggregator.hpp
controlplane/src/: main.cpp
controlplane/src/api/: backends_handler.cpp  stats_handler.cpp
controlplane/src/health/: health_checker.cpp
controlplane/src/monitor/: monitor_component.cpp
controlplane/src/stats/: stats_aggregator.cpp
dataplane/: CMakeLists.txt  Dockerfile
dataplane/include/graph/: dispatcher.hpp  frame.hpp  frame_pool.hpp  graph.hpp  node.hpp  packet_meta.hpp
dataplane/include/io/: dpdk_port.hpp  eal.hpp  ring.hpp
dataplane/include/lb/: atomic_rcu.hpp  backend_pool.hpp  nat_table.hpp  port_pool.hpp  steering.hpp
dataplane/include/net/: flow_key.hpp
dataplane/include/nodes/: arp_node.hpp  dnat_node.hpp  drop_node.hpp  ether_rewrite_node.hpp  ip4_parse_node.hpp  lb_node.hpp  ring_rx_node.hpp  ring_tx_node.hpp  rx_node.hpp  steer_node.hpp  tx_node.hpp
dataplane/src/: main.cpp
dataplane/src/graph/: dispatcher.cpp  frame_pool.cpp  graph.cpp
dataplane/src/io/: dpdk_port.cpp  eal.cpp
dataplane/src/nodes/: arp_node.cpp  dnat_node.cpp  ether_rewrite_node.cpp  ip4_parse_node.cpp  lb_node.cpp  rx_node.cpp  steer_node.cpp  tx_node.cpp
dataplane/tests/: .clang-tidy  CMakeLists.txt  test_backend_pool.cpp  test_control_view.cpp  test_flow_key.cpp  test_graph.cpp  test_nat_table.cpp  test_net_types.cpp  test_port_pool.cpp
docs/: getting-started.md  graph-architecture.md  index.md
docs/superpowers/plans/: 2026-06-05-cerebellum.md
docs/superpowers/specs/: 2026-06-04-cerebellum-design.md
grafana/dashboards/: cerebellum.json
grafana/provisioning/dashboards/: provider.yaml
grafana/provisioning/datasources/: victoria.yaml
libs/: CMakeLists.txt
libs/common/: CMakeLists.txt
libs/common/include/common/: config.hpp  config_loader.hpp  net_types.hpp
libs/common/src/: config_loader.cpp  net_types.cpp
libs/ipc/: CMakeLists.txt
libs/ipc/include/ipc/: cache_aligned.hpp  control_view.hpp  lcore_stats.hpp  shm_header.hpp  shm_provider.hpp
libs/ipc/src/: shm_provider.cpp
loadtest/k6/: load.js
nginx/docker-entrypoint.d/: 10-tls.envsh
nginx/templates/: cerebellum.conf.template
nginx/tls/: cerebellum-tls.conf.template
ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  types.ts
ui/src/components/: BackendsTable.tsx  Navbar.tsx  StatsBar.tsx
